exports[`PickListTable should display node-picklist correctly 1`] = `
<div>
  <Table
    bordered={false}
    bsClass="table"
    condensed={true}
    hover={true}
    responsive={true}
    striped={true}>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "left",
              "width": "2em"
            }
          }>
          <input
            checked={false}
            className="normalAction"
            onChange={[Function onChange]}
            title="Select all"
            type="checkbox" />
        </th>
        <th
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "bottom"
            }
          }>
          <FontAwesome
            className="normalActionNoPadding"
            name="print"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Print labels for selected nodes" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected node(s) count">
            (1)
          </span>
          <FontAwesome
            className="normalAction"
            name="truck"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Move selected nodes" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected node(s) count">
            (1)
          </span>
          <FontAwesome
            className="normalAction"
            name="remove"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Remove selected nodes from list" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected node(s) count">
            (1)
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked=""
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked="checked"
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;

exports[`PickListTable should display object-picklist correctly 1`] = `
<div>
  <Table
    bordered={false}
    bsClass="table"
    condensed={true}
    hover={true}
    responsive={true}
    striped={true}>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "left",
              "width": "2em"
            }
          }>
          <input
            checked={false}
            className="normalAction"
            onChange={[Function onChange]}
            title="Select all"
            type="checkbox" />
        </th>
        <th
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "bottom"
            }
          }>
          <FontAwesome
            className="normalActionNoPadding"
            name="truck"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Move selected objects" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected object(s) count">
            (1)
          </span>
          <FontAwesome
            className="normalAction"
            name="remove"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Remove selected objects from list" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected object(s) count">
            (1)
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked=""
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked="checked"
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;
